--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="/Pics/logo.png" class="h-4 w-4" />
+  <link rel="icon" type="image/png" href="./Pics/logo.png" class="h-4 w-4" />
   <title>Deeper Life Bible Church Rochester</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css" />
@@ -24,12 +24,10 @@
 
     <!-- Nav Links -->
     <ul class="hidden md:flex space-x-8 text-black font-bold text-lg">
-      <li><a href="index.html" class="hover:text-red-600 transition">Home</a></li>
-      <li><a href="about.html" class="hover:text-red-600 transition">About Us</a></li>
-      <li><a href="#locations" class="hover:text-red-600 transition">Locations</a></li>
-      <!-- <li><a href="resources.html" class="hover:text-blue-600 transition">Resources</a></li>
-      <li><a href="#contact" class="hover:text-blue-600 transition">Contact Us</a></li> -->
-      <li><a href="https://dclm.org" target="_blank" class="hover:text-red-600 transition">Global HQ</a></li>
+      <li><a href="index.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
+      <li><a href="about.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">About Us</a></li>
+      <li><a href="#locations" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Locations</a></li>
+      <li><a href="https://dclm.org" target="_blank" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Global HQ</a></li>
     </ul>
 
     <!-- Mobile Menu Button -->
@@ -42,10 +40,10 @@
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-white shadow-md">
     <ul class="flex flex-col divide-y divide-gray-200 text-black font-bold">
-      <li><a href="index.html" class="block py-6 px-6 hover:text-red-600 transition">Home</a></li>
-      <li><a href="about.html" class="block py-6 px-6 hover:text-red-600 transition">About Us</a></li>
-      <li><a href="#locations" class="block py-6 px-6 hover:text-red-600 transition">Locations</a></li>
-      <li><a href="https://dclm.org" target="_blank" class="block py-6 px-6 hover:text-red-600 transition">Global HQ</a></li>
+      <li><a href="index.html" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
+      <li><a href="about.html" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">About Us</a></li>
+      <li><a href="#locations" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Locations</a></li>
+      <li><a href="https://dclm.org" target="_blank" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Global HQ</a></li>
     </ul>
   </div>
 
@@ -66,7 +64,7 @@
       <img src="./Icons/location.svg" alt="Address" class="h-8 w-8">
       <div>
         <p>Address</p>
-        <a href="https://maps.app.goo.gl/DWS2Xr3d57TEEyFD9" target="_blank" rel="noopener noreferrer" class="hover:text-white text-gray-300 font-bold">
+        <a href="https://maps.app.goo.gl/DWS2Xr3d57TEEyFD9" target="_blank" rel="noopener noreferrer" class="hover:text-gray-300 text-white font-bold">
           3699 West Henrietta Road, Rochester, NY 14623
         </a>
       </div>
@@ -79,7 +77,7 @@
       <img src="./Icons/phone.svg" alt="Phone" class="h-6 w-6">
       <div>
         <p>Phone</p>
-        <p class="text-gray-300 font-bold">+1 (585) 260-1943</p>
+        <p class="text-white font-bold">+1 (585) 260-1943</p>
       </div>
     </div>
 
@@ -90,7 +88,7 @@
       <img src="./Icons/mail.svg" alt="Email" class="h-8 w-8">
       <div>
         <p>Email</p>
-        <a href="mailto:dlbcrochester@gmail.com" class="hover:text-white text-gray-300 font-bold">dlbcrochester@gmail.com</a>
+        <a href="mailto:dlbcrochester@gmail.com" class="hover:text-gray-300 text-white font-bold">dlbcrochester@gmail.com</a>
       </div>
     </div>
   </div>
