--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
 <section class="relative w-full h-[100vh] overflow-hidden md:mt-16">
   <div class="absolute inset-0 w-full h-full">
-    <img src="/Pics/dclm-banner.jpg" alt="DCLM Banner" class="w-full h-full object-cover">
+    <img src="./Pics/dclm-banner.jpg" alt="DCLM Banner" class="w-full h-full object-cover">
   </div>
 
   <div class="absolute inset-0 flex items-center justify-center bg-black/40">
@@ -572,7 +572,7 @@
       <!-- Church Logo -->
       <div class="flex items-center space-x-3 mb-4">
         <img src="./Pics/logo.png" alt="Church Logo" class="h-12 w-12 object-contain">
-        <h3 class="script-font text-3xl font-semibold text-white">Deeper Life Bible Church Rochester NY</h3>
+        <h3 class="script-font text-4xl font-semibold text-white">Deeper Life Bible Church Rochester NY</h3>
       </div>
 
       <!-- Address -->
