--- a/index.html
+++ b/index.html
@@ -675,11 +675,9 @@
     <div>
       <h3 class="text-xl font-semibold text-white mb-4">Quick Links</h3>
       <ul class="space-y-2 text-lg">
-        <li><a href="#home" class="hover:text-white transition">Home</a></li>
-        <li><a href="#about" class="hover:text-white transition">About Us</a></li>
-        <!-- <li><a href="#special-meetings" class="hover:text-white transition">Special Meetings</a></li>
-        <li><a href="#pastor" class="hover:text-white transition">Message from Pastor</a></li>
-        <li><a href="#contact" class="hover:text-white transition">Contact Us</a></li> -->
+        <li><a href="index.html" class="hover:text-white transition">Home</a></li>
+        <li><a href="about.html" class="hover:text-white transition">About Us</a></li>
+        <li><a href="#locations" class="hover:text-white transition">Locations</a></li>
         <li><a href="https://dclm.org/" class="hover:text-white transition">Global HQ</a></li>
       </ul>
     </div>
