--- a/about.html
+++ b/about.html
@@ -5,13 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="./Pics/logo.png" class="h-4 w-4" />
   <title>About Deeper Life Bible Church</title>
+  <meta name="description" content="Learn about Deeper Life Bible Church Rochester — our mission, vision, and commitment to sharing the gospel and nurturing believers through sound teaching and fellowship." />
+  <meta name="keywords" content="About Deeper Life Bible Church, Deeper Life, DLBC Rochester, DLBC, DCLM, Deeper Life Rochester, Christian ministry, church mission, Holiness church, Evangelism, Bible teaching, Rochester worship" />
+  <meta name="author" content="Deeper Life Bible Church Rochester" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Church",
+    "name": "About Deeper Life Bible Church Rochester",
+    "url": "https://www.deeperliferoc.org/about.html",
+    "logo": "https://www.deeperliferoc.org/Pics/logo.png",
+    "description": "Deeper Life Bible Church Rochester is a Christ-centered community committed to worship, spiritual growth, and service.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "3699 West Henrietta Road, Rochester, NY 14623",
+      "addressLocality": "Rochester",
+      "addressRegion": "NY",
+      "postalCode": "14623",
+      "addressCountry": "US"
+    },
+    "telephone": "+1-585-260-1943",
+    "openingHours": "Sunday 9:45AM - 12:00PM",
+    "sameAs": []
+  }
+  </script>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-gray-50 text-gray-900">
-
-
 
 <!-- Navbar -->
 <nav class="bg-gray-50 fixed top-0 left-0 w-full z-50">
