--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="./Pics/logo.png" class="h-4 w-4" />
   <title>Deeper Life Bible Church Rochester</title>
+  <meta name="description" content="Welcome to Deeper Life Bible Church Rochester — a place to grow spiritually through the Word of God, prayer, and fellowship. Join us for uplifting worship and sound biblical teaching." />
+  <meta name="keywords" content="Deeper Life Bible Church, church in Rochester, Rochester churches, Deeper Life, DLBC Rochester, DLBC, DCLM, Bible study, Christian fellowship, worship service, Holiness church, Evangelism" />
+  <meta name="author" content="Deeper Life Bible Church Rochester" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Structured Data for Local SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Church",
+    "name": "Deeper Life Bible Church Rochester",
+    "url": "https://www.deeperliferoc.org/",
+    "logo": "https://www.deeperliferoc.org/Pics/logo.png",
+    "description": "Deeper Life Bible Church Rochester is a Christ-centered community committed to worship, spiritual growth, and service.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "3699 West Henrietta Road, Rochester, NY 14623",
+      "addressLocality": "Rochester",
+      "addressRegion": "NY",
+      "postalCode": "14623",
+      "addressCountry": "US"
+    },
+    "telephone": "+1-585-260-1943",
+    "openingHours": "Sunday 9:45AM - 12:00PM",
+    "sameAs": []
+  }
+  </script>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
+
+
 <body class="bg-gray-50 text-gray-900">
 
 
