--- a/about.html
+++ b/about.html
@@ -32,7 +32,9 @@
   }
   </script>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body class="bg-gray-50 text-gray-900">
 
 <!-- Navbar -->
@@ -49,8 +51,23 @@
     <ul class="hidden md:flex space-x-8 text-black font-bold text-lg">
       <li><a href="index.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
       <li><a href="about.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">About Us</a></li>
-      <li><a href="#locations" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Locations</a></li>
-      <li><a href="https://dclm.org" target="_blank" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Global HQ</a></li>
+      <li><a href="index.html#locations" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Locations</a></li>
+      <li>
+        <a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH"
+          target="_blank" rel="noopener noreferrer"
+          class="flex items-center gap-2 decoration-2 underline-offset-8 transition">
+          <i class="fa-brands fa-youtube text-red-600 text-lg"></i>
+          <span class="hover:underline hover:decoration-red-600 decoration-2">YouTube</span>
+        </a>
+      </li>
+      <li>
+        <a href="https://dclm.org" 
+          target="_blank" 
+          rel="noopener noreferrer"
+          class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition">
+          Global HQ
+        </a>
+      </li>
     </ul>
 
     <!-- Mobile Menu Button -->
@@ -66,7 +83,22 @@
       <li><a href="index.html" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
       <li><a href="about.html" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">About Us</a></li>
       <li><a href="index.html#locations" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Locations</a></li>
-      <li><a href="https://dclm.org" target="_blank" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Global HQ</a></li>
+      <li>
+        <a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH"
+          target="_blank" rel="noopener noreferrer"
+          class="flex items-center gap-2 px-6 py-3 transition">
+          <i class="fa-brands fa-youtube text-red-600 text-lg"></i>
+          <span class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8">YouTube</span>
+        </a>
+      </li>
+      <li class="py-3 pl-6">
+        <a href="https://dclm.org"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="inline-block bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition">
+          Global HQ
+        </a>
+      </li>
     </ul>
   </div>
 
@@ -625,7 +657,8 @@
       <ul class="space-y-2 text-lg">
         <li><a href="index.html" class="hover:text-white transition">Home</a></li>
         <li><a href="about.html" class="hover:text-white transition">About Us</a></li>
-        <li><a href="#locations" class="hover:text-white transition">Locations</a></li>
+        <li><a href="index.html#locations" class="hover:text-white transition">Locations</a></li>
+        <li><a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH" class="hover:text-white transition">YouTube</a></li>
         <li><a href="https://dclm.org/" class="hover:text-white transition">Global HQ</a></li>
       </ul>
     </div>
