--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   }
   </script>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 
@@ -51,11 +52,26 @@
     </a>
 
     <!-- Nav Links -->
-    <ul class="hidden md:flex space-x-8 text-black font-bold text-lg">
+    <ul class="hidden md:flex space-x-8 text-black text-lg font-bold">
       <li><a href="index.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
       <li><a href="about.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">About Us</a></li>
       <li><a href="#locations" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Locations</a></li>
-      <li><a href="https://dclm.org" target="_blank" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Global HQ</a></li>
+      <li>
+        <a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH"
+          target="_blank" rel="noopener noreferrer"
+          class="flex items-center gap-2 decoration-2 underline-offset-8 transition">
+          <i class="fa-brands fa-youtube text-red-600 text-lg"></i>
+          <span class="hover:underline hover:decoration-red-600 decoration-2">YouTube</span>
+        </a>
+      </li>
+      <li>
+        <a href="https://dclm.org" 
+          target="_blank" 
+          rel="noopener noreferrer"
+          class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition">
+          Global HQ
+        </a>
+      </li>
     </ul>
 
     <!-- Mobile Menu Button -->
@@ -71,7 +87,22 @@
       <li><a href="index.html" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
       <li><a href="about.html" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">About Us</a></li>
       <li><a href="#locations" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Locations</a></li>
-      <li><a href="https://dclm.org" target="_blank" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Global HQ</a></li>
+      <li>
+        <a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH"
+          target="_blank" rel="noopener noreferrer"
+          class="flex items-center gap-2 px-6 py-3 transition">
+          <i class="fa-brands fa-youtube text-red-600 text-lg"></i>
+          <span class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8">YouTube</span>
+        </a>
+      </li>
+      <li class="py-3 pl-6">
+        <a href="https://dclm.org"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="inline-block bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition">
+          Global HQ
+        </a>
+      </li>
     </ul>
   </div>
 
@@ -706,6 +737,7 @@
         <li><a href="index.html" class="hover:text-white transition">Home</a></li>
         <li><a href="about.html" class="hover:text-white transition">About Us</a></li>
         <li><a href="#locations" class="hover:text-white transition">Locations</a></li>
+        <li><a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH" class="hover:text-white transition">YouTube</a></li>
         <li><a href="https://dclm.org/" class="hover:text-white transition">Global HQ</a></li>
       </ul>
     </div>
