--- a/about.html
+++ b/about.html
@@ -86,12 +86,12 @@
       <li>
         <a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH"
           target="_blank" rel="noopener noreferrer"
-          class="flex items-center gap-2 px-6 py-3 transition">
+          class="flex items-center gap-2 px-6 py-6 transition">
           <i class="fa-brands fa-youtube text-red-600 text-lg"></i>
           <span class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8">YouTube</span>
         </a>
       </li>
-      <li class="py-3 pl-6">
+      <li class="py-6 px-6">
         <a href="https://dclm.org"
           target="_blank"
           rel="noopener noreferrer"
