--- a/about.html
+++ b/about.html
@@ -11,25 +11,25 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Church",
-    "name": "About Deeper Life Bible Church Rochester",
-    "url": "https://www.deeperliferoc.org/about.html",
-    "logo": "https://www.deeperliferoc.org/Pics/logo.png",
-    "description": "Deeper Life Bible Church Rochester is a Christ-centered community committed to worship, spiritual growth, and service.",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "3699 West Henrietta Road, Rochester, NY 14623",
-      "addressLocality": "Rochester",
-      "addressRegion": "NY",
-      "postalCode": "14623",
-      "addressCountry": "US"
-    },
-    "telephone": "+1-585-260-1943",
-    "openingHours": "Sunday 9:45AM - 12:00PM",
-    "sameAs": []
-  }
+    {
+      "@context": "https://schema.org",
+      "@type": "Church",
+      "name": "About Deeper Life Bible Church Rochester",
+      "url": "https://www.deeperliferoc.org/about.html",
+      "logo": "https://www.deeperliferoc.org/Pics/logo.png",
+      "description": "Deeper Life Bible Church Rochester is a Christ-centered community committed to worship, spiritual growth, and service.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "3699 West Henrietta Road, Rochester, NY 14623",
+        "addressLocality": "Rochester",
+        "addressRegion": "NY",
+        "postalCode": "14623",
+        "addressCountry": "US"
+      },
+      "telephone": "+1-585-260-1943",
+      "openingHours": "Sunday 9:45AM - 12:00PM",
+      "sameAs": []
+    }
   </script>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -37,11 +37,9 @@
 
 <body class="bg-gray-50 text-gray-900">
 
-<!-- Navbar -->
 <nav class="bg-gray-50 fixed top-0 left-0 w-full z-50 shadow-sm">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 py-3 flex items-center justify-between">
     
-    <!-- Logo -->
     <a href="index.html" class="flex items-center space-x-2 w-[85%] sm:w-auto">
       <img src="./Pics/logo.png" alt="Logo" class="h-8 w-8 sm:h-10 sm:w-10 object-contain">
       <span class="script-font text-2xl sm:text-3xl font-bold text-black">
@@ -49,7 +47,6 @@
       </span>
     </a>
 
-    <!-- Desktop Nav Links -->
     <ul class="hidden lg:flex space-x-6 xl:space-x-8 text-black text-base xl:text-lg font-bold">
       <li><a href="index.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
       <li><a href="about.html" class="hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">About Us</a></li>
@@ -72,13 +69,11 @@
       </li>
     </ul>
 
-    <!-- Mobile/Tablet Menu Button -->
     <button id="menu-btn" class="lg:hidden focus:outline-none">
       <img src="./Icons/hamburger.svg" alt="Menu" class="h-8 w-8">
     </button>
   </div>
 
-  <!-- Mobile/Tablet Menu -->
   <div id="mobile-menu" class="hidden bg-white shadow-md lg:hidden">
     <ul class="flex flex-col divide-y divide-gray-200 text-black font-bold">
       <li><a href="index.html" class="block py-6 px-6 hover:underline hover:decoration-red-600 decoration-2 underline-offset-8 transition">Home</a></li>
@@ -110,30 +105,24 @@
   </script>
 </nav>
 
-<!-- Info Bar -->
-<!-- <section class="bg-[#061c36] text-white mt-24 md:mt-20 py-6 w-full"> -->
 <section class="bg-[#061c36] text-white mt-20 md:mt-16 text-md py-6 lg:fixed top-0 left-0 z-50 w-full">
-<!-- <section class="bg-[#061c36] text-white mt-20 [@media(max-width:560px)]:mt-12 md:mt-16 text-md py-6 lg:fixed top-0 left-0 z-50 w-full"> -->
   <div class="max-w-7xl mx-auto px-6 flex flex-col lg:flex-row justify-between items-start lg:items-center gap-8 lg:gap-0">
 
-    <!-- Address -->
     <div class="flex items-start gap-3 w-full lg:w-auto">
       <img src="./Icons/location.svg" alt="Address" class="h-8 w-8">
       <div>
         <p class="text-sm sm:text-base">Address</p>
         <a href="https://maps.app.goo.gl/DWS2Xr3d57TEEyFD9"
-           target="_blank"
-           rel="noopener noreferrer"
-           class="hover:text-gray-300 text-white font-bold text-sm sm:text-base">
+          target="_blank"
+          rel="noopener noreferrer"
+          class="hover:text-gray-300 text-white font-bold text-sm sm:text-base">
           3699 West Henrietta Road, Rochester, NY 14623
         </a>
       </div>
     </div>
 
-    <!-- Divider (desktop only) -->
     <div class="hidden lg:block w-px bg-gray-300 h-10"></div>
 
-    <!-- Phone -->
     <div class="flex items-start gap-3 w-full lg:w-auto">
       <img src="./Icons/phone.svg" alt="Phone" class="h-8 w-8">
       <div>
@@ -142,16 +131,14 @@
       </div>
     </div>
 
-    <!-- Divider (desktop only) -->
     <div class="hidden lg:block w-px bg-gray-300 h-10"></div>
 
-    <!-- Email -->
     <div class="flex items-start gap-3 w-full lg:w-auto">
       <img src="./Icons/mail.svg" alt="Email" class="h-8 w-8">
       <div>
         <p class="text-sm sm:text-base">Email</p>
         <a href="mailto:dlbcrochester@gmail.com"
-           class="hover:text-gray-300 text-white font-bold text-sm sm:text-base">
+          class="hover:text-gray-300 text-white font-bold text-sm sm:text-base">
           dlbcrochester@gmail.com
         </a>
       </div>
@@ -159,17 +146,13 @@
   </div>
 </section>
 
-
 <section class="relative w-full h-screen overflow-hidden lg:mt-16">
-  <!-- Background Image -->
   <img src="./Pics/dclm-banner.jpg" 
-       alt="DCLM Banner" 
-       class="absolute inset-0 w-full h-full object-cover">
+    alt="DCLM Banner" 
+    class="absolute inset-0 w-full h-full object-cover">
 
-  <!-- Dark Overlay -->
   <div class="absolute inset-0 bg-black/40"></div>
 
-  <!-- Centered Text -->
   <div class="absolute inset-0 flex items-center justify-center text-center">
     <h1 class="script-font text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold leading-tight text-white px-6">
       About Deeper Christian Life Ministry
@@ -177,9 +160,6 @@
   </div>
 </section>
 
-
-
-<!-- Content Section -->
 <section class="bg-white py-12">
   <div class="max-w-5xl mx-auto px-6 text-xl text-gray-700 leading-relaxed space-y-6 text-justify">
     
@@ -222,12 +202,10 @@
   </div>
 </section>
 
-<!-- What We Believe Section -->
 <section id="beliefs" class="bg-gray-50 py-16">
   <div class="max-w-5xl mx-auto px-6">
     <h2 class="text-4xl font-bold text-center text-black-800 mb-8">What We Believe</h2>
 
-    <!-- Intro -->
     <div class="text-gray-700 leading-relaxed text-center mb-10">
       <p class="text-lg mb-4">
         <strong class="text-2xl">BIBLE DOCTRINES: ABRIDGED EDITION</strong><br>
@@ -611,7 +589,7 @@
           No unclean thing will be there. There, we shall know each other, our knowledge having been perfected. There will be no more 
           curse upon anything. There will be no more night; the glory of the Lord will be the light thereof.
           <br><span class="text-md italic">(Psalm 102:25,26; Isaiah 51:6; 65:17; Matthew 5:18; 24:35; 2 Peter 3:10-13; Revelation 21;
-             Isaiah 66:22; 2 Peter 3:12,13; I Corinthians 13:12; I John 3:2,3; Revelation 21:1-7; 22:1-5.)</span>
+            Isaiah 66:22; 2 Peter 3:12,13; I Corinthians 13:12; I John 3:2,3; Revelation 21:1-7; 22:1-5.)</span>
         </div>
       </div>
 
@@ -637,19 +615,15 @@
   </div>
 </section>
 
-<!-- Footer -->
 <footer class="bg-[#061c36] text-gray-300 pt-8 pb-8">
   <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-10 md:justify-items-center">
 
-    <!-- Column 1: Church Info -->
-     <div class="space-y-3">
-      <!-- Church Logo -->
+    <div class="space-y-3">
       <div class="flex items-center space-x-3 mb-4">
         <img src="./Pics/logo.png" alt="Church Logo" class="h-12 w-12 object-contain">
-        <h3 class="script-font text-4xl font-semibold text-white">Deeper Life Bible Church Rochester NY</h3>
+        <h3 class="script-font text-2xl font-semibold text-white">Deeper Life Bible Church Rochester NY</h3>
       </div>
 
-      <!-- Address -->
       <div class="flex items-start space-x-3">
         <img src="./Icons/location.svg" alt="Map Icon" class="h-6 w-6">
         <p class="text-lg">
@@ -657,13 +631,11 @@
         </p>
       </div>
 
-      <!-- Phone -->
       <div class="flex items-center space-x-3">
         <img src="./Icons/phone.svg" alt="Phone Icon" class="h-6 w-6">
         <p class="text-lg">+1 (585) 260-1943</p>
       </div>
 
-      <!-- Email -->
       <div class="flex items-center space-x-3">
         <img src="./Icons/mail.svg" alt="Mail Icon" class="h-6 w-6">
         <p class="text-lg">dlbcrochester@gmail.com</p>
@@ -671,41 +643,38 @@
     </div>
 
 
-    <!-- Column 2: Quick Links -->
     <div>
       <h3 class="text-xl font-semibold text-white mb-4">Quick Links</h3>
       <ul class="space-y-2 text-lg">
         <li><a href="index.html" class="hover:text-white transition">Home</a></li>
         <li><a href="about.html" class="hover:text-white transition">About Us</a></li>
         <li><a href="index.html#locations" class="hover:text-white transition">Locations</a></li>
-        <li><a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH" class="hover:text-white transition">YouTube</a></li>
-        <li><a href="https://dclm.org/" class="hover:text-white transition">Global HQ</a></li>
+        <li><a href="https://youtube.com/@dlbcrochester?si=3mYH8KDlqaJYVslH" class="hover:text-white transition" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+        <li><a href="https://dclm.org/" class="hover:text-white transition" target="_blank" rel="noopener noreferrer">Global HQ</a></li>
       </ul>
     </div>
 
-        <!-- Column 3: Resources -->
     <div>
       <h3 class="text-xl font-semibold text-white mb-4">Locations</h3>
       <ul class="space-y-2 text-lg">
-        <li><a href="https://maps.app.goo.gl/DWS2Xr3d57TEEyFD9" target="_blank" class="hover:text-white transition">Rochester, NY</a></li>
-        <li><a href="https://maps.app.goo.gl/gDEQ2PDXxi1dS7CY7" target="_blank" class="hover:text-white transition">Buffalo, NY</a></li>
-        <li><a href="https://maps.app.goo.gl/Loz4nztdJNNEJxbZA" target="_blank" class="hover:text-white transition">Potsdam, NY</a></li>
+        <li><a href="https://maps.app.goo.gl/DWS2Xr3d57TEEyFD9" target="_blank" rel="noopener noreferrer" class="hover:text-white transition">Rochester, NY</a></li>
+        <li><a href="https://maps.app.goo.gl/gDEQ2PDXxi1dS7CY7" target="_blank" rel="noopener noreferrer" class="hover:text-white transition">Buffalo, NY</a></li>
+        <li><a href="https://maps.app.goo.gl/Loz4nztdJNNEJxbZA" target="_blank" rel="noopener noreferrer" class="hover:text-white transition">Potsdam, NY</a></li>
       </ul>
 
 
       <h3 class="text-xl font-semibold text-white mt-8 mb-4">Resources</h3>
       <ul class="space-y-2 text-lg">
-        <li><a href="https://dailymanna.app/category/daily-manna/" class="hover:text-white transition">Daily Manna</a></li>
-        <li><a href="https://dailymanna.app/category/higher-everyday/" class="hover:text-white transition">Higher Everyday</a></li>
-        <li><a href="https://dailymanna.app/category/sincere-milk/" class="hover:text-white transition">Sincere Milk</a></li>
+        <li><a href="https://dailymanna.app/category/daily-manna/" class="hover:text-white transition" target="_blank" rel="noopener noreferrer">Daily Manna</a></li>
+        <li><a href="https://dailymanna.app/category/higher-everyday/" class="hover:text-white transition" target="_blank" rel="noopener noreferrer">Higher Everyday</a></li>
+        <li><a href="https://dailymanna.app/category/sincere-milk/" class="hover:text-white transition" target="_blank" rel="noopener noreferrer">Sincere Milk</a></li>
       </ul>
     </div>
   </div> 
 
 
-  <!-- Bottom -->
   <div class="border-t border-gray-600 mt-10 pt-6 text-center text-sm md:text-md lg:text-lg text-gray-400">
-    <p>&copy; <span id="year"></span> Deeper Life Bible Church Rochester NY</p>
+    <p>© <span id="year"></span> Deeper Life Bible Church Rochester NY</p>
     <p>All rights reserved</p>
   </div>
 
