Added upcoming events

--- a/index.html
+++ b/index.html
@@ -302,7 +302,63 @@
   </div>
 </section>
 
-<section id="events" class="bg-gray-50 py-12 mb-12">
+<!-- UPCOMING EVENTS SECTION -->
+<section class="px-6 py-12 bg-gray-50 text-gray-900">
+
+    <!-- SECTION TITLE -->
+    <h2 class="text-4xl md:text-5xl text-center font-semibold tracking-wide mb-8">
+        Upcoming Events
+    </h2>
+
+    <!-- EVENTS GRID -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
+
+        <!-- EVENT 1 -->
+        <div class="bg-white rounded-xl p-6 border border-gray-200">
+
+            <!-- TITLE -->
+            <h3 class="text-2xl font-semibold text-gray-900 mb-4 underline decoration-red-600 decoration-2">
+                Night Vigil
+            </h3>
+
+            <!-- DETAILS -->
+            <p class="text-gray-700 leading-relaxed text-lg mb-3">
+                Join us for a powerful night of prayer, worship, and spiritual renewal.
+            </p>
+
+            <p class="text-gray-700 text-lg">
+                <strong>Date:</strong> 28th of November, 2025<br>
+                <strong>Time:</strong> 11:00 PM<br>
+                <strong>Venue:</strong> 3699 West Henrietta Road, Rochester NY, 14620
+            </p>
+        </div>
+
+        <!-- EVENT 2 -->
+        <div class="bg-white rounded-xl p-6 border border-gray-200">
+
+            <!-- TITLE -->
+            <h3 class="text-2xl font-semibold text-gray-900 mb-4 underline decoration-red-600 decoration-2">
+                Thanksgiving Service
+            </h3>
+
+            <!-- DETAILS -->
+            <p class="text-gray-700 leading-relaxed text-lg mb-3">
+                A special service dedicated to gratitude, worship, and praising God 
+                for His goodness throughout the year.
+            </p>
+
+            <p class="text-gray-700 text-lg">
+                <strong>Date:</strong> 30th of November, 2025<br>
+                <strong>Time:</strong> 9:45 AM<br>
+                <strong>Venue:</strong> 3699 West Henrietta Road, Rochester NY, 14620
+            </p>
+
+        </div>
+    </div>
+</section>
+
+
+<section id="events" class="bg-white py-12 mb-12">
   <div class="max-w-7xl mx-auto px-6">
 
     <div class="text-center mb-10">
@@ -346,7 +402,7 @@
   </div>
 </section>
 
-<section id="locations" class="bg-white py-8">
+<section id="locations" class="bg-gray-50 py-8">
   <div class="max-w-7xl mx-auto px-6 text-center mb-12">
     <h2 class="text-2xl md:text-3xl font-bold text-black-800 mb-3">Our Locations</h2>
     <p class="text-gray-600 text-lg lg:text-2xl">We are one family across multiple cities in Upstate New York.</p>
