--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 </section>
 
-<section class="bg-gray-50 py-8 mb-4">
+<section class="bg-gray-50 py-12">
   <div class="max-w-7xl mx-auto px-6 text-center">
     <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-2">Our Days of Meeting</h2>
     <p class="text-gray-600 text-lg md:text-2xl mb-8">
@@ -260,7 +260,7 @@
   </div>
 </section>
 
-<section id="pastor" class="bg-white py-8">
+<section id="pastor" class="bg-white py-12">
   <div class="max-w-7xl mx-auto px-6 text-center mb-4">
     <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">
       Message from Our Pastor
@@ -306,7 +306,7 @@
 <section class="px-6 py-12 bg-gray-50 text-gray-900">
 
     <!-- SECTION TITLE -->
-    <h2 class="text-4xl md:text-5xl text-center font-semibold tracking-wide mb-8">
+    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">
         Upcoming Events
     </h2>
 
@@ -362,7 +362,7 @@
   <div class="max-w-7xl mx-auto px-6">
 
     <div class="text-center mb-10">
-      <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-3">
+      <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">
         Re-occurring Events
       </h2>
       <p class="text-gray-600 text-lg lg:text-2xl">
