--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 <section class="px-6 py-12 bg-gray-50 text-gray-900">
 
     <!-- SECTION TITLE -->
-    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">
+    <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 text-center">
         Upcoming Events
     </h2>
 
